BugsAndSolutions
#Dagger

https://google.github.io/dagger/android

Error:
/Users/ibrahimyilmaz/AdvancedAndroidSample/app/httpUrl/tmp/kapt3/stubs/debug/me/ibrahimyilmaz/advancedandroidsample/di/base/SampleApplicationComponent.java:13:
error: java.util.Map<java.lang.Class<? extends android.app.Activity>,javax.inject.Provider<dagger.android.AndroidInjector.Factory<? extends android.app.Activity>>>
cannot be provided without an @Provides-annotated method.

Solution:
In ApplicationComponent, we have to add AndroidInjectionModule::class

-----

Error:
e: /Users/ibrahimyilmaz/AdvancedAndroidSample/app/httpUrl/tmp/kapt3/stubs/debug/me/ibrahimyilmaz/advancedandroidsample/di/base/SampleApplicationComponent.java:11: error: [dagger.android.AndroidInjector.inject(T)] java.util.Map<java.lang.Class<? extends android.support.v4.app.Fragment>,javax.inject.Provider<dagger.android.AndroidInjector.Factory<? extends android.support.v4.app.Fragment>>> cannot be provided without an @Provides-annotated method.
public abstract interface SampleApplicationComponent {
                ^
      java.util.Map<java.lang.Class<? extends android.support.v4.app.Fragment>,javax.inject.Provider<dagger.android.AndroidInjector.Factory<? extends android.support.v4.app.Fragment>>> is injected at
          dagger.android.DispatchingAndroidInjector.<init>(injectorFactories)
      dagger.android.DispatchingAndroidInjector<android.support.v4.app.Fragment> is injected at
          me.ibrahimyilmaz.advancedandroidsample.base.BaseActivity.fragmentInjector
      me.ibrahimyilmaz.advancedandroidsample.MainActivity is injected at
          dagger.android.AndroidInjector.inject(arg0)

Solution:
In ApplicationComponent, we have to add AndroidSupportInjectionModule::class

------

Error:
****/ data binding error ****msg:Identifiers must have user defined types from the XML file. View is missing it file:/Users/ibrahimyilmaz/AdvancedAndroidSample/app/src/main/res/layout/fragment_top_head_lines.xml loc:20:49 - 20:52 ****\ data binding error ****

Solution:

<import type="android.view.View" />

----

Error:
        org.threeten.bp.zone.ZoneRulesException: No time-zone data files registered
Solution:

For Android project you should use

compile 'com.jakewharton.threetenabp:threetenabp:1.0.3

----

Error:
     Caused by: java.lang.RuntimeException: cannot find implementation for me.ibrahimyilmaz.advancedandroidsample.data.AppDatabase. AppDatabase_Impl does not exist

Solution:
use kapt instead of annotationProcessor


